Added line into index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <img src="images/tomcat.gif">
 </td>
 <td>
-<h1>Sample "Hello, from Yayheni Likhachou</h1>
+<h1>Sample "Hello, from Yauheni Likhachou</h1>
+<h1> "Hello2, from Yauheni</h1>
 <p>This is the home page for a sample application used to illustrate the
 source directory organization of a web application utilizing the principles
 outlined in the Application Developer's Guide.
